--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "mongodb": "^5.7.0",
+    "react-router-dom": "^6.14.1",
     "save": "^2.9.0",
     "serve-favicon": "^2.5.0"
   }
